fix: Accouting journal type and query

--- a/erpnext/translations/fr.json
+++ b/erpnext/translations/fr.json
@@ -106,7 +106,7 @@
         "Conditions": "Conditions",
         "Journal Name": "Nom du journal",
         "Miscellaneous": "Divers",
-        "Purchase": "Achat",
+        "Purchases": "Achats",
         "Sales": "Ventes",
         "System Manager": "Responsable système",
         "Type": "Type"
