fix: Website UX

--- a/erpnext/translations/fr.json
+++ b/erpnext/translations/fr.json
@@ -9482,7 +9482,7 @@
         "Batch Identification": "Identification par lots",
         "Clear drafts after x minutes": "Supprimer les brouillons après x minutes",
         "Convert Item Description to Clean HTML": "Convertir la description de l'élément pour nettoyer le code HTML",
-        "Default Item Group": "Groupe d'Éléments par Défaut",
+        "Default Item Group": "Groupe d'articles par défaut",
         "Default Stock UOM": "Unité de mesure par Défaut des Articles",
         "Default Valuation Method": "Méthode de Valorisation par Défaut",
         "Default Warehouse": "Entrepôt par Défaut",
