chore: french translations

--- a/erpnext/translations/fr.json
+++ b/erpnext/translations/fr.json
@@ -3605,7 +3605,7 @@
         "First Responded On": "Première Réponse Le",
         "Fulfilled": "Complété",
         "High": "Haut",
-        "Hold": "Mettre en attente",
+        "Hold": "En attente",
         "ISS-.YYYY.-": "ISS-.YYYY.-",
         "Issue": "Ticket",
         "Issue Split From": "Ticket créé à partir de",
@@ -4120,7 +4120,7 @@
         "Email Address": "Adresse email",
         "HR": "RH",
         "HR User": "Chargé RH",
-        "Hold": "Mettre en attente",
+        "Hold": "En attente",
         "Job Applicant": "Demandeur d'Emploi",
         "Job Opening": "Offre d’Emploi",
         "Notes": "Notes",
