feat: Default accounting journals

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -861,6 +861,7 @@ Average Age,Âge Moyen,
 Average Commission Rate,Taux de commission moyen,
 Average Discount,Remise Moyenne,
 Average Rate,Prix moyen,
+Average Response Time,Durée de réponse moyenne,
 Average balance,Solde moyen,
 Average invoicing,Facturation moyenne,
 Average time taken by the supplier to deliver,Délai moyen de livraison par le fournisseur,
@@ -1119,6 +1120,7 @@ Breakdown,Panne,
 Broadcasting,Radio/Télévision,
 Brokerage,Courtage,
 Browse BOM,Parcourir la LDM,
+Browse help topics.,Naviguez dans les différents sujets créés pour vous aider.,
 Budget Account,Compte de Budget,
 Budget Accounts,Comptes de Budgets,
 Budget Against,Budget Pour,
@@ -2677,6 +2679,7 @@ Expected Start Date,Date de début prévue,
 Expected Time (in hours),Durée Prévue (en heures),
 Expected Value After Useful Life,Valeur Attendue Après Utilisation Complète,
 Expense / Difference account ({0}) must be a 'Profit or Loss' account,Compte de Charge / d'Écart ({0}) doit être un Compte «de Résultat»,
+Expense Account Missing,Compte de charges manquant,
 Expense Account not set for Item {0}. Please set an Expense Account for the item in the Items table,Compte de charges non défini pour l'article {0}. Veuillez définir un compte de charge pour l'article dans la table des article,
 Expense Account,Compte de Charge,
 Expense Amount,Montant des dépenses,
@@ -2808,6 +2811,7 @@ First Check-in and Last Check-out,Premier enregistrement entrant et dernier enre
 First Email,Premier email,
 First Name,Prénom,
 First Responded On,Première Réponse Le,
+First Response Time,Durée avant la première réponse,
 First add items in the Item Locations table,Veuillez commencer par ajouter vos articles dans le tableau de localisation des articles,
 First,First,
 "Fiscal Regime is mandatory, kindly set the fiscal regime in the company {0}","Le régime fiscal est obligatoire, veuillez le définir pour la société {0}",
@@ -2902,6 +2906,7 @@ Freight and Forwarding Charges,Frais de Fret et d'Expédition,
 Frequency To Collect Progress,Fréquence d'envoi des emails de suivi de l'avancement,
 Frequency of Depreciation (Months),Fréquence des Amortissements (Mois),
 Frequency,Fréquence,
+Frequently Read Articles,Article les plus lus,
 Friday,Vendredi,
 From Address 1,Ligne d'addresse 1 (Origine),
 From Address 2,Ligne d'addresse 2 (Origine),
@@ -3128,6 +3133,9 @@ Grant Leaves,Accorder des congés,
 Grant,Subvention,
 Greater Than Amount,Montant supérieur à,
 Green,Vert,
+Greeting Subtitle,Sous-titre de bienvenue,
+Greeting Title,Titre de bienvenue,
+Greetings Section,Section de bienvenue,
 Grocery,Épicerie,
 Gross Margin %,Marge brute %,
 Gross Margin,Marge brute,
@@ -3379,6 +3387,7 @@ In Qty,En Qté,
 In Stock Qty,Qté En Stock,
 In Stock: ,En Stock :,
 In Stock,En Stock,
+In Time,A l'heure,
 In Transit,Livraison en cours,
 In Value,En Valeur,
 In Words (Company Currency),En Toutes Lettres (Devise Société),
@@ -4129,6 +4138,7 @@ MAT-STE-.YYYY.-,MAT-STE-.YYYY.-,
 MFG-BLR-.YYYY.-,MFG-BLR-.YYYY.-,
 MFG-PP-.YYYY.-,MFG-PP-.AAAA.-,
 MFG-WO-.YYYY.-,MFG-WO-.YYYY.-,
+MOP,OD,
 MTNG-.YYYY.-.MM.-.DD.-,MTNG-.YYYY.-.MM.-.DD.-,
 MWS Auth Token,Jeton d'authentification MWS,
 MWS Credentials,Informations d'identification MWS,
@@ -4387,6 +4397,7 @@ Minutes to First Response for Issues,Minutes avant la première réponse par tic
 Minutes to First Response for Opportunity,Mintes avant la première réponse par opportunité,
 Minutes,Compte-rendu,
 Miscellaneous Expenses,Charges Diverses,
+Miscellaneous Operations,Opérations diverses,
 Miscellaneous,Divers,
 Missed,Manqué,
 Missing Currency Exchange Rates for {0},Taux de change Manquant pour {0},
@@ -4745,6 +4756,7 @@ Old Parent,Grand Parent,
 Oldest Items,Articles les plus vieux,
 On Converting Opportunity,A la conversion d'une opportunité,
 On Duty,Permanence,
+On Hold Since,En attente depuis le,
 On Hold,En attente,
 On Item Quantity,Sur les quantité de l'article,
 On Leave,En Congé,
@@ -4771,6 +4783,7 @@ Only select if you have setup Cash Flow Mapper documents,Ne sélectionner que si
 Only show Customer of these Customer Groups,N'afficher que les clients de ces groupes de clients,
 Only show Items from these Item Groups,N'afficher que les articles de ces groupes d'articles,
 Only users with the {0} role can create backdated leave applications,Seuls les utilisateurs avec le rôle {0} peuvent créer des demandes de congés antidatées.,
+Only {0} in Stock for item {1},Seulement {0} en stock pour l'article,
 Only {0} in stock for item {1},Seulement {0} en stock pour l'article {1},
 Open BOM {0},Ouvrir LDM {0},
 Open Contact,Ouvrir le contact,
@@ -4890,6 +4903,7 @@ Other,Autre,
 Others,Autres,
 Out Qty,Qté sortante,context
 Out Qty,Qté Sortante,
+Out Time,Heure de sortie,
 Out Value,Valeur Sortante,
 Out of AMC,Sur AMC,
 Out of Order,Hors service,
@@ -5034,6 +5048,8 @@ Password,Mot de passe,
 Past Due Date,Date d'échéance dépassée,
 Past,Passé,
 Path,Chemin,
+Pause SLA On Status,Status de pause du niveau de service,
+Pause SLA On,Mettre l'accord de niveau de service en pause le,
 Pause,Pause,
 Pay Against Benefit Claim,Payer la demande de prestations,
 Pay Remaining,Reste à payer,
@@ -6274,6 +6290,7 @@ Resolution,Résolution,
 Resolutions,Résolutions,
 Resolve error and upload again.,Résoudre l'erreur et réimporter,
 Resolved By,Résolu Par,
+Resolved,Résolu,
 Response By Variance,Variance du temps de réponse,
 Response By,Heure de réponse,
 Response Key List,Liste des clés de réponse,
@@ -6725,6 +6742,7 @@ Select BOM and Qty for Production,Sélectionner la LDM et la Qté pour la Produc
 Select BOM,Sélectionner LDM,
 Select Batch Numbers,Sélectionnez les Numéros de Lot,
 Select Batch,Sélectionnez le Lot,
+Select Billing Address,Sélectionnez une adresse de facturation,
 Select Brand...,Sélectionner une Marque ...,
 Select Company...,Sélectionner la Société ...,
 Select Company,Sélectionnez une entreprise,
@@ -6906,6 +6924,7 @@ Session is expired. Save doc to login.,La session est expiré. Enregitrez le doc
 "Session not valid, Do you want to login?","La session n'est pas valide, voulez-vous vous connecter ?",
 Set Accepted Warehouse,Définir l'entrepôt de réception,
 Set Advances and Allocate (FIFO),Set Advances and Allocate (FIFO),
+Set Basic Rate Manually,Définir le prix unitaire de base manuellement,
 "Set Default Values like Company, Currency, Current Fiscal Year, etc.","Définir les Valeurs par Défaut comme : Societé, Devise, Exercice Actuel, etc...",
 Set Exchange Gain / Loss,Définir le change Gain / Perte,
 Set From Warehouse,Définir depuis l'entrepôt,
@@ -7766,6 +7785,7 @@ The type of party this transaction is made with. Mostly customers or suppliers.,
 "The user that will be used to create Customers, Items and Sales Orders. This user should have the relevant permissions.","L'utilisateur utilisé pour créer les clients, articles et commandes client. Cet utilisateur doit avoir les autorisations appropriées.",
 The value of {0} differs between Items {1} and {2},La valeur de {0} diffère entre les articles {1} et {2},
 The value {0} is already assigned to an exisiting Item {1}.,La valeur {0} est déjà affectée à l'article existant {1},
+The value {0} is already assigned to an existing Item {1}.,La valeur {0} est déjà attribuée à l'article existant {1},
 The {0} {1} created sucessfully,{0} {1} a été créé avec succès,
 "Then Pricing Rules are filtered out based on Customer, Customer Group, Territory, Supplier, Supplier Type, Campaign, Sales Partner etc.","Les règles de tarification sont ensuite filtrées en fonction des clients, des groupes de clients, des régions, des fournisseurs, des groupes de Fournisseurs, des campagnes, des partenaires commerciaux, etc.",
 Theory,Théorie,
@@ -8028,6 +8048,7 @@ Total Experience,Expérience Totale,
 Total Forecast (Future Data),Prévision totale (données futures),
 Total Forecast (Past Data),Prévision totale (données passées),
 Total Gain/Loss,Total des profits/pertes,
+Total Hold Time,Durée totale de mise en attente,
 Total Holidays,Total des vacances,
 Total Income This Year,Total des revenus de l'année,
 Total Income,Revenus totaux,
@@ -8365,6 +8386,7 @@ User Details,Détails utilisateurs,
 User ID not set for Employee {0},ID de l'Utilisateur non défini pour l'Employé {0},
 User ID,ID Utilisateur,
 User Remark,Remarques,
+User Resolution Time,Durée de résolution pour l'utilisateur,
 User has not applied rule on the invoice {0},L'utilisateur n'a pas appliqué de règle de tarification sur la facture {0},
 User must always select,L'utilisateur doit toujours sélectionner,
 User {0} does not exist,Utilisateur {0} n'existe pas,
@@ -8544,6 +8566,7 @@ Warranty Expiry Date,Date d'Expiration de la Garantie,
 Warranty Period (Days),Période de Garantie (Jours),
 Warranty Period (in days),Période de Garantie (en jours),
 Warranty,Garantie,
+We're here to help,Nous sommes là pour vous aider,
 Web Link,Lien web,
 Webhook ID,ID du webhook,
 Webhook Secret Key,Clé secrète du Webhook,
@@ -8924,6 +8947,7 @@ woocommerce - {0},woocommerce - {0},
 {0}: {1} must be less than {2},{0}: {1} doit être inférieur à {2}, 
 {0}: {1} must be less than {2},{0}: {1} doit être inférieur à {2},
 {0}: {1} not found in Invoice Details table,{0} : {1} introuvable dans la table de Détails de la Facture,
+{1} Not in Stock,{1} n'est pas en stock,
 "{2} <b>{0}</b> has submitted Assets.\
 								Remove Item <b>{1}</b> from table to continue.",{2} <b>{0}</b> a soumis des actifs. Supprimer l'article <b>{1}</b> du tableau pour continuer.,
 {} Assets created for {},{} actifs créés pour {},
