fix: Sepa direct debit payment creation

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -8676,8 +8676,8 @@ Write Off Account,Compte de Reprise,
 Write Off Amount (Company Currency),Montant de la Reprise (Devise Société),
 Write Off Amount,Montant de la Reprise,
 Write Off Based On,Reprise Basée Sur,
-Write Off Cost Center,Centre de coûts des Reprises,
-Write Off Difference Amount,Montant de la Différence de la Reprise,
+Write Off Cost Center,Centre de coûts pour les déductions,
+Write Off Difference Amount,Déduire la différence,
 Write Off Entry,Écriture de reprise,context
 Write Off Entry,Écriture de Reprise,
 Write Off Outstanding Amount,Encours de Reprise,
