chore: french translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3755,7 +3755,7 @@ Item or Warehouse for row {0} does not match Material Request,L'Article ou l'Ent
 Item quantity can not be zero,La quantité d'article ne peut pas être zéro,
 Item taxes updated,Taxes de l'article mises à jour,
 Item to be manufactured or repacked,Article à produire ou à réemballer,
-Item valuation rate is recalculated considering landed cost voucher amount,Le taux d'évaluation de l'article est recalculé compte tenu du montant du bon de prix au débarquement,
+Item valuation rate is recalculated considering landed cost voucher amount,Le taux de valorisation de l'article est recalculé compte tenu du montant du bon de prix au débarquement,
 Item variant {0} exists with same attributes,La variante de l'article {0} existe avec les mêmes caractéristiques,
 "Item {0} (Serial No: {1}) cannot be consumed as is reserverd\
 						 to fullfill Sales Order {2}.",L'élément {0} (numéro de série: {1}) ne peut pas être consommé tel quel. Pour remplir la commande client {2}.,
@@ -3857,12 +3857,12 @@ LAP/,LAP/,
 LEAD-,LEAD-,
 Label,Libellé,
 Laboratory,Laboratoire,
-Landed Cost Help,Aide Coûts Logistiques,
-Landed Cost Item,Coût de l'Article au Débarquement,
-Landed Cost Purchase Receipt,Reçu d'Achat du Coût au Débarquement,
-Landed Cost Taxes and Charges,Taxes et Frais du Coût au Débarquement,
-Landed Cost Voucher Amount,Montant de la Référence de Coût au Débarquement,
-Landed Cost Voucher,Référence de Coût au Débarquement,
+Landed Cost Help,Aide aux frais à l'arrivée,
+Landed Cost Item,Frais de l'article à l'arrivée,
+Landed Cost Purchase Receipt,Reçu d'achat liés aux frais à l'arrivée,
+Landed Cost Taxes and Charges,Taxes et frais à l'arrivée,
+Landed Cost Voucher Amount,Montant de la réintégration des frais à l'arrivée,
+Landed Cost Voucher,Réintégration des frais à l'arrivée,
 Lapsed,Caduc,
 Large,Grand,
 Last Carbon Check,Dernière Vérification Carbone,
@@ -6380,7 +6380,7 @@ Row #{0} (Payment Table): Amount must be negative,Row # {0} (Table de paiement):
 Row #{0} (Payment Table): Amount must be positive,Ligne #{0} (Table de paiement): Le montant doit être positif,
 Row #{0}: Accepted Warehouse and Supplier Warehouse cannot be same,Ligne #{0}: L'entrepôt accepté et l'entrepôt fournisseur ne peuvent pas être les mêmes,
 Row #{0}: Account {1} does not belong to company {2},Ligne # {0}: le compte {1} n'appartient pas à la société {2},
-Row #{0}: Allocated Amount cannot be greater than outstanding amount.,Ligne # {0}: montant attribué ne peut pas être supérieur au montant en souffrance.,
+Row #{0}: Allocated Amount cannot be greater than outstanding amount.,Ligne # {0}: montant alloué ne peut pas être supérieur au montant en restant dû.,
 "Row #{0}: Asset {1} cannot be submitted, it is already {2}","Ligne #{0} : L’Actif {1} ne peut pas être soumis, il est déjà {2}",
 Row #{0}: Asset {1} does not belong to company {2},Ligne #{0} : L’Actif {1} n’appartient pas à la société {2},
 Row #{0}: Asset {1} does not linked to Item {2},Ligne #{0} : L’Actif {1} n’est pas lié à l'Article {2},
