chore: french translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -4011,10 +4011,10 @@ Legal Expenses,Frais Juridiques,
 Legal,Juridique,
 Length Must be less than 280.,La longueur doit être inférieure à 280,
 Less Than Amount,Montant inférieur à,
-Let's Set Up the Selling Module.,Configurons le module de ventes.,
+Let's Set Up the Selling Module.,Configuration du module de ventes.,
 Let's Setup Asset Management,Configuration de la gestion des actifs,
 Let's Setup the Human Resource Module. ,Configuration du module de resources humaines,
-Let's Setup the Payroll Module. ,Configurons le module de paie.,
+Let's Setup the Payroll Module.,Configuration du module de paie.,
 Let's Setup the Stock Module.,Configuration du module de gestion des stocks,
 Let's set up the Buying Module.,Configuration du module d'achats,
 Let's set up your CRM.,Configuration du CRM,
@@ -9011,9 +9011,18 @@ woocommerce - {0},woocommerce - {0},
 {1} Not in Stock,{1} n'est pas en stock,
 "{2} <b>{0}</b> has submitted Assets.\
 								Remove Item <b>{1}</b> from table to continue.",{2} <b>{0}</b> a soumis des actifs. Supprimer l'article <b>{1}</b> du tableau pour continuer.,
+{}  To Deliver,{} à livrer,
+{}  available,{} disponibles,
+{}  to Receive,{} à recevoir,
 {} Assets created for {},{} actifs créés pour {},
+{} Assigned,{} assigné·es,
+{} Available,{} disponibles,
+{} Open,{} ouvert·es,
+{} Pending,{} en attente,
+{} available,{} disponibles,
 {} is an invalid Attendance Status.,{} est un statut de présence invalide,
 {} is required to generate E-Way Bill JSON,{} est requis pour générer une facture JSON E-Way,
 {} is required to generate e-Way Bill JSON,{} est requis pour générer une facture e-Way JSON,
 {} of {},{} sur {},
+{} to Bill,{} à facturer,
 ← Back to upload files,← Retour au téléchargement de fichiers,
