fix: Unable to cancel employee advance

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -4037,7 +4037,7 @@ Line spacing for amount in words,Espacement des lignes pour le montant en lettre
 Link Options,Options du lien,
 Link a new bank account,Lier un nouveau compte bancaire,
 Link existing Quality Procedure.,Lier une procédure de qualité existante,
-Link it to a transaction,Lié le à une transaction,
+Link it to a transaction,Le lier à une transaction,
 Link this payment with one or many transactions,Liez ce paiement avec une ou plusieurs transactions,
 Link to Material Request,Lien vers la demande de matériel,
 Link to Material Requests,Lien vers les demandes de matériel,
