chore: french translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3912,6 +3912,7 @@ Last Order Amount,Montant de la Dernière Commande,
 Last Order Date,Date de la Dernière Commande,
 Last Purchase Price,Dernier prix d'achat,
 Last Purchase Rate,Dernier Prix d'Achat,
+Last Stock Transaction for item {0} was on {1}.,La dernière transation de stock pour l'article {0} était le {1},
 Last Sync Datetime,Dernière date de synchronisation,
 Last Sync of Checkin,Dernière synchronisation d'enregistrement,
 Last carbon check date cannot be a future date,La date de dernière vérification carbone ne peut être dans le futur,
@@ -5414,6 +5415,7 @@ Please register an IBAN in the customer's bank account,Veuillez enregistrer un I
 Please register the SIREN number in the company information file,Veuillez enregistrer le numéro SIREN dans la fiche d'information de la société,
 Please register the creation date and a customer bank account,Veuillez enregistrer une date de création et un compte bancaire lié au client,
 Please remove this Invoice {0} from C-Form {1},Veuillez retirez cette Facture {0} du C-Form {1},
+Please remove this item and try to submit again or update the posting time.,Veuillez supprimer cet article et essayer de valider à nouveau ou modifiez la date de comptabilisation,
 Please save before assigning task.,Veuillez sauvegarder avant d'assigner une tâche.,
 Please save first,Veuillez sauvegarder d'abord,
 Please save the report again to rebuild or update,Veuillez enregistrer le rapport pour le recharger ou le mettre à jour,
@@ -7416,6 +7418,7 @@ Stock Reconciliation,Réconciliation du Stock,
 Stock Reports,Rapports de Stock,
 Stock Settings,Paramètres des stocks,
 Stock Summary,Solde du stock,
+Stock Transactions for Item {0} cannot be posted before this time.,Les transactions de stock pour l'article {0} ne peuvent pas être comptabilisées avant cette date.,
 Stock Transactions,Transactions du Stock,
 Stock UOM,Unité de mesure du Stock,context
 Stock UOM,Unité de mesure du stock,
